--- a/which-connector-to-use.html
+++ b/which-connector-to-use.html
@@ -76,7 +76,7 @@
             <h5>Does this have any data sources?</h5>
             <p>This is seeing what the underlying data store of the data of the source is. If the source stores information into a structured database, then a JDBC Connector is a popular option to pull in account and entitlement information. If the source is a directory, then a LDAP connector might be best poised connect to the data store. If there is a file data source available, then the implementation would move away from a direct connector method to a file-based connectivity method.</p>
             <h5>No Connector Available</h5>
-            <p>If all data sources, APIs, and connectivity options are exhausted, then there isn't much SailPoint can do. SailPoint would suggest working with the source company to get some interface available. SailPoint is very partial to the <a href="http://www.simplecloud.info/#Specification" target="_blank" rel="noopener">SCIM</a> standard (they helped found it), but can accomodate other interfaces through a mix of general or custom connector implementations.</p>
+            <p>If all data sources, APIs, and connectivity options are exhausted, then there isn't much SailPoint can do. SailPoint would suggest working with the source company to get some interface available. SailPoint is very partial to the <a href="http://www.simplecloud.info/#Specification" target="_blank" rel="noopener">SCIM</a> standard (we helped define it), but can accomodate other interfaces through a mix of general or custom connector implementations.</p>
         </div>
         
         <br>
